corpus/strings.txt
===================
Simple string
===================

"hello, \(w.world)"

---

(source_file
  (string (interpolation
    (identifier)
    (selector (identifier)))))

===================
Simple bytes
===================

'hello, \(w.world)!'

---

(source_file
  (bytes (interpolation
    (identifier)
    (selector (identifier)))))

===================
Multi line string
===================

"""
hello, \(w.world)!
"""

---

(source_file
  (string (interpolation
    (identifier)
    (selector (identifier)))))

===================
Multi line bytes
===================

#'''
hello, \#(w.world)!
'''#

---

(source_file
  (bytes (bytes (interpolation
    (identifier)
    (selector (identifier))))))

===================
Multi interpolation
===================

"\(hello), \(w.world)!"

---

(source_file
  (string
    (interpolation (identifier))
    (interpolation
      (identifier)
      (selector (identifier)))))

===================
Complicated strings
===================

test: {
  simple: "hello, \(w.world)"
  multi: """
    before
    hello, \(w.world)
    after
    """
}

---


(source_file
  (field
    (label (label_name (identifier)))
    (struct
      (field
        (label (label_name (identifier)))
        (string
          (interpolation
            (identifier)
            (selector (identifier)))))
      (field
        (label (label_name (identifier)))
        (string
          (interpolation
            (identifier)
            (selector (identifier))))))))

===================
Complicated bytes
===================

test: {
  simple: 'hello, \(w.world)'
  multi: '''
    before
    hello, \(w.world)
    after
    '''
}

---


(source_file
  (field
    (label (label_name (identifier)))
    (struct
      (field
        (label (label_name (identifier)))
        (bytes
          (interpolation
            (identifier)
            (selector (identifier)))))
      (field
        (label (label_name (identifier)))
        (bytes
          (interpolation
            (identifier)
            (selector (identifier))))))))

===================
Comments
===================

urls: [
  "https://cuelang.org/",
  "http://\(100 + 20 + 7).0.0.1/",
]

links: "https://cuelang.org/": [
  "/docs",
  "https://github.com/cue-lang/cue/releases"
]

---

(source_file
  (field
    (label (label_name (identifier)))
    (list
      (string)
      (string (interpolation
        (number)
        (number)
        (number)))))
  (field
    (label (label_name (identifier)))
    (label (label_name (simple_string)))
    (list
      (string)
      (string))))